# SimCLR_example

./: SimCLR.ipynb  pyproject.toml
